# pas-bot

./: .env.example  .gitattributes  .gitignore  README.md  assignees.example.json  config.example.toml  justfile  pyproject.toml  report-agent.example.md
.github/release-notes/: v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.27.md  v0.1.28.md  v0.1.32.md  v0.1.33.md  v0.1.34.md  v0.1.35.md  v0.1.36.md  v0.1.37.md
.github/workflows/: release.yml
apps/macos/PASMenuBar/: Info.plist  Package.swift
apps/windows/: README.md
apps/windows/PASTray/: PASRunner.cs  PASTray.csproj  Program.cs  TrayApplicationContext.cs
docs/: PRODUCT_PLAN.md
launchd/: com.pas.jira-daily.plist  com.pas.repo-report.plist  com.pas.repo-snapshot.plist
scripts/: check-local-setup.sh  generate_macos_icon.py  install-jira-daily-launchd.sh  run-pas.ps1  run-pas.sh  send-jira-daily.sh  send-repo-report.sh  send-repo-snapshot.sh  test-slack-now.sh  uninstall-jira-daily-launchd.sh
src/pas_automation/: app_state.py  cli.py  config.py  http.py  runtime_env.py
src/pas_automation/features/: __init__.py  ai_assistant.py  assignees.py  automation.py  daily_activity.py  dev_assistant.py  dev_insights.py  doctor.py  github_remote_report.py  health.py  issue_repositories.py  jira_daily.py  jira_flow.py  jira_issue_watch.py  jira_issues.py  remote_repos.py  repo_morning_sync.py  repo_report.py  repo_status.py  report_history.py  scheduler.py  settings_import.py  slack_test.py  work_notes.py
src/pas_automation/integrations/: __init__.py  calendar.py  git_repos.py  github.py  jira.py  openai_report.py  slack.py
(+14 files in other folders)
